# holiday-optimizer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
models/: __init__.py  base_model.py  solver.py
models/minimum_cash_flow/: cash_flow.py
pages/: home.py
problems/: __init__.py
problems/minimum_cash_flow/: description.md  page.py
src/holiday_optimizer/: __init__.py  app.py
src/holiday_optimizer/models/: __init__.py
src/holiday_optimizer/models/minimum_cash_flow/: cash_flow.py  model.py
src/holiday_optimizer/models/room_assignment/: __init__.py  model.py  room_assignment.py
src/holiday_optimizer/pages/: home.py
src/holiday_optimizer/problems/: __init__.py  base_problem.py
src/holiday_optimizer/problems/minimum_cash_flow/: page.py
src/holiday_optimizer/problems/room_assignment/: description.md  page.py
