[project]
name = "holiday-optimizer"
version = "0.1.0"
description = "Optimization tools for holiday planning problems."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "highspy>=1.14.0",
    "pandas>=3.0.2",
    "pyomo>=6.10.0",
    "streamlit>=1.56.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/holiday_optimizer"]
